--- a/html/prouductAll.html
+++ b/html/prouductAll.html
@@ -51,7 +51,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="">
+                        <a href="prouductPicture.html">
                             <p>畫作類</p>
                         </a>
                     </li>
@@ -199,7 +199,7 @@
         </div>
     </div> -->
     <!-- 新的 -->
-    <div class="productPageChange">
+    <!-- <div class="productPageChange">
         <ul>
             <li><a href="">&laquo;</a></li>
             <li><a href="" class="small">1</a></li>
@@ -214,7 +214,7 @@
             <li><a href="" class="small">10</a></li>
             <li><a href="">&raquo;</a></li>
         </ul>
-    </div>
+    </div> -->
     @@include('layout/footer.html')
 </body>
 </html>
