--- a/html/listing.html
+++ b/html/listing.html
@@ -221,13 +221,13 @@
                                 <h4>競標時間</h4>
                                 <select name="time" class="aidBgColor" v-model="time" required>
                                     <option value="">請選擇</option>
-                                    <option value="23h 59m 59s">24小時</option>
-                                    <option value="2d 23h 59m 59s">3天</option>
-                                    <option value="6d 23h 59m 59s">7天</option>
-                                    <option value="9d 23h 59m 59s">10天</option>
-                                    <option value="14d 23h 59m 59s">15天</option>
-                                    <option value="20d 23h 59m 59s">21天</option>
-                                    <option value="29d 23h 59m 59s">30天</option>
+                                    <option value="1">24小時</option>
+                                    <option value="3">3天</option>
+                                    <option value="7">7天</option>
+                                    <option value="10">10天</option>
+                                    <option value="15">15天</option>
+                                    <option value="21">21天</option>
+                                    <option value="30">30天</option>
                                 </select>
                             </label>
                         </div>
@@ -245,13 +245,13 @@
                                 <option value="100">NT 100</option>
                                 <option value="200">NT 200</option>
                                 <option value="500">NT 500</option>
-                                <option value="1,000">NT 1,000</option>
-                                <option value="2,000">NT 2,000</option>
-                                <option value="5,000">NT 5,000</option>
-                                <option value="10,000">NT 10,000</option>
-                                <option value="20,000">NT 20,000</option>
-                                <option value="50,000">NT 50,000</option>
-                                <option value="100,000">NT 100,000</option>
+                                <option value="1000">NT 1,000</option>
+                                <option value="2000">NT 2,000</option>
+                                <option value="5000">NT 5,000</option>
+                                <option value="10000">NT 10,000</option>
+                                <option value="20000">NT 20,000</option>
+                                <option value="50000">NT 50,000</option>
+                                <option value="100000">NT 100,000</option>
                             </select>
                         </label>
                     </div>
