--- a/html/listing.html
+++ b/html/listing.html
@@ -31,7 +31,7 @@
     <!-- 登入  -->
     <script src="js/loginCheck.js"></script>
     <script >
-        window.addEventListener('load',function(){
+        window.addEventListener('true',function(){
             loginCheck(false);
         })
     </script>
