--- a/html/articlePage.html
+++ b/html/articlePage.html
@@ -361,7 +361,7 @@
                             this.click = !this.click;
                         }else{
                             // this.discusArtAll[0].articleLikes -= 1;
-                            this.discusArtAll[0].articleLikes = parseInt(this.discusArtAll[0].articleLikes) - 1;
+                            this.discusArtAll[0].articleLikes = parseInt(this.discusArtAll[0].articleLikes) + 1;
                             this.click = !this.click;
                         };
                         // 避免抓到ajax的this
