listing & gallery update

--- a/html/gallery.html
+++ b/html/gallery.html
@@ -73,7 +73,7 @@
             </div>
         </div>
         <div class="lightBoxContent">
-            <h3>寂寞菸火</h3>
+            <h3>開心菸火</h3>
             <p>創作者:噴火龍</p>
             <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
             <a href="productSingle.html" class="goPrice round">前往出價</a>
@@ -114,7 +114,7 @@
             </div>
         </div>
         <div class="lightBoxContent">
-            <h3>寂寞菸火</h3>
+            <h3>開心碎紙機</h3>
             <p>創作者:噴火龍</p>
             <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
             <a href="productSingle.html" class="goPrice round">前往出價</a>
@@ -140,7 +140,7 @@
             </div>
         </div>
         <div class="lightBoxContent">
-            <h3>寂寞菸火</h3>
+            <h3>開心翻轉</h3>
             <p>創作者:噴火龍</p>
             <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
             <a href="productSingle.html" class="goPrice round">前往出價</a>
@@ -166,7 +166,7 @@
             </div>
         </div>
         <div class="lightBoxContent">
-            <h3>寂寞菸火</h3>
+            <h3>開心魔方</h3>
             <p>創作者:噴火龍</p>
             <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
             <a href="productSingle.html" class="goPrice round">前往出價</a>
@@ -185,7 +185,7 @@
             </div>
         </div>
         <div class="lightBoxContent">
-            <h3>寂寞菸火</h3>
+            <h3>開心彈跳</h3>
             <p>創作者:噴火龍</p>
             <p>藝術家企圖透過這件作品表達一種身處聲音風景的想像。在環境中，每個對話、每個聲音都有其獨特的頻率，在人與人對話或人與自然環境互動的同時也被這些獨特的頻率穿透，因此藝術家創造了一種可以讓身體接收穿越的視聽感受。</p>
             <a href="productSingle.html" class="goPrice round">前往出價</a>
@@ -205,6 +205,8 @@
 <script src="js/owl/owl.carousel.js"></script>
 <script src="js/owl/owl.carousel.min.js"></script>
 <script src="js/gallery.js"></script>
+
+<!-- cigarette -->
 <link rel="stylesheet" href="assets/css/cigarette.css">
 
 <!-- slitting -->
