gallery page  image update

--- a/html/gallery02.html
+++ b/html/gallery02.html
@@ -147,16 +147,10 @@
     </section>
     <section class="lightBox displayNone" id="lightBoxPumpkin02">
         <i class="closeLightBox fas fa-times" id="closeLightBoxPumpkin02"></i>
-        <!-- afterImage -->
+        <!-- ease02 -->
         <div class="photoBox">
-            <div class="container">
-                <div class="compare">
-                    <div class="before">
-                        <div class="after"></div>
-                    </div>
-                    <p>請拖曳藍線</p>
-                    <input type="range" min="0" max="540" step="10" id="compare-ip" class="notInput">
-                </div>
+            <div class="ease">
+                <img src="assets/image/commodity/commodity_17.jpg">
             </div>
         </div>
         <div class="lightBoxContent">
@@ -291,8 +285,12 @@ const app = new Vue({
 })
 </script>
 
+<!-- ease02 -->
+<link rel="stylesheet" href="galleryAll/gallery/easeGallery02.css">
+
+
 <!-- afterImage -->
-<link rel="stylesheet" href="galleryAll/gallery/afterImageGallery02.css">
+<!-- <link rel="stylesheet" href="galleryAll/gallery/afterImageGallery02.css">
 
 <script>
     document.querySelector('.compare #compare-ip').addEventListener('input', function(e){
@@ -305,7 +303,7 @@ const app = new Vue({
             document.querySelector('#galleryHint').classList.add('displayNone');
         })
     })
-</script>
+</script> -->
 
 
 
