--- a/html/gallery02.html
+++ b/html/gallery02.html
@@ -290,12 +290,12 @@ const app = new Vue({
 
 
 <!-- afterImage -->
-<!-- <link rel="stylesheet" href="galleryAll/gallery/afterImageGallery02.css">
+<link rel="stylesheet" href="galleryAll/gallery/afterImageGallery02.css">
 
 <script>
-    document.querySelector('.compare #compare-ip').addEventListener('input', function(e){
-        document.querySelector('.compare .before .after').style.width = (+e.target.value) + "px";
-    });
+    // document.querySelector('.compare #compare-ip').addEventListener('input', function(e){
+    //     document.querySelector('.compare .before .after').style.width = (+e.target.value) + "px";
+    // });
 
     window.addEventListener('load',function(){
         
@@ -303,7 +303,7 @@ const app = new Vue({
             document.querySelector('#galleryHint').classList.add('displayNone');
         })
     })
-</script> -->
+</script>
 
 
 
