--- a/html/galleryDoor.html
+++ b/html/galleryDoor.html
@@ -17,7 +17,7 @@
             loginCheck(false);
         })
     </script>
-    <!-- 登入ＥＮＤ  -->s
+    <!-- 登入ＥＮＤ  -->
 </head>
 <body>
     <div class="galleryDoorWrap">
